--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -33,7 +33,8 @@ li.result {
     margin-bottom:20px;
     padding-top:5px;
     padding-left:5px;
-    padding-right:10px
+    padding-right:10px;
+    overflow:hidden;
 }
 
 li.selectedResult {
@@ -90,3 +91,24 @@ li.selectedChart {
     border-style:solid;
 }
 
+/* for rickshaw */
+#chart_wrapper {
+        display: inline-block;
+        font-family: Arial, Helvetica, sans-serif;
+}
+#chart {
+        float: left;
+}
+#legend {
+        float: left;
+        margin-left: 15px;
+}
+#offset_form {
+        float: left;
+        margin: 2em 0 0 15px;
+        font-size: 13px;
+}
+#y_axis {
+        float: left;
+        width: 40px;
+}
