--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -115,17 +115,21 @@ li.selectedChart {
 
 /* for rickshaw */
 #chart_wrapper {
-        display: inline-block;
-        font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #chart {
-        float: left;
+    float: left;
+    width:780px;
+    height: 500px;
 }
 #legend {
-        float: left;
-        margin-left: 15px;
+    float: left;
+    margin-left: 15px;
+    color: rgb(64, 64, 64);
+    background: none repeat scroll 0% 0% rgb(255, 255, 255);
 }
 #y_axis {
-        float: left;
-        width: 40px;
+    float: left;
+    width: 40px;
 }
